Fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@
   background-color: #141414;
   border-color: #94eb5b;
   font-family: Teko;
+  margin-top: 1.5vh
 }
 
 .App-dropdown {
